--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 geo = "0.29.3"
+rstar = "0.12.2"
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
